--- a/src/styles/Modal.css
+++ b/src/styles/Modal.css
@@ -29,6 +29,12 @@
   box-shadow: 0 5px 20px 0 rgba(0, 0, 0, 0.04);
 }
 
+@media (width < 500 ) {
+  .modal {
+    padding: 10px;
+  }
+}
+
 .modalHeader {
   height: 50px;
   background: white;
